# mindrelay

./: .gitignore  LICENSE  README.md  TODO.md  memorymesh-import.json  package-lock.json  package.json  tsconfig.tsbuildinfo
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
config/: selectors.json
docs/: index.html  privacy-policy.html
native/: Cargo.toml
native/app/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
native/app/src-tauri/capabilities/: default.json
native/app/src-tauri/icons/: icon.icns
native/app/src-tauri/src/: lib.rs
native/crates/mindrelay-core/: Cargo.toml
native/crates/mindrelay-core/src/: db.rs  lib.rs  models.rs  validate.rs  vault.rs
native/crates/mindrelay-host/: Cargo.toml
native/crates/mindrelay-host/src/: logger.rs  main.rs  protocol.rs
native/frontend/: index.html  package.json  tsconfig.json  vite.config.ts
native/frontend/src/: App.tsx
native/frontend/src/lib/: storage.ts
native/installer/: com.mindrelay.host.json  install.sh
scripts/: import-obsidian.js
src/: background.ts  options.tsx  popup.css  popup.tsx
src/contents/: chatgpt-main.ts  chatgpt.ts  claude-main.ts  claude.ts  gemini-main.ts  gemini.ts  grok-main.ts  grok.ts
src/lib/: config.ts  db.ts  inject.ts  log.ts  native-messaging.ts  relevance.ts  storage.ts  toast.ts
src/tabs/: library.css  library.tsx
store/: listing.md  privacy-policy.md
