[package]
name = "mindrelay-host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mindrelay-host"
path = "src/main.rs"

[dependencies]
mindrelay-core = { path = "../mindrelay-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
byteorder = "1"

[dev-dependencies]
tempfile = "3"
